fix(doc-core): the 960-1440 device displays a horizontal scroll bar

--- a/packages/cli/doc-core/src/theme-default/layout/DocLayout/index.module.scss
+++ b/packages/cli/doc-core/src/theme-default/layout/DocLayout/index.module.scss
@@ -36,7 +36,7 @@
 
   .content {
     margin-left: var(--modern-sidebar-width);
-    width: calc(100vw - var(--modern-sidebar-width));
+    width: calc(100% - var(--modern-sidebar-width));
     padding: 48px 48px 72px 48px;
 
     :global(.modern-doc) {
